2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Detect inReset and trap situations and return bool from step.
	* server/Cpu.h: Add inReset and haveTrap, and return bool from step.
	* server/GdbServer.cpp: Handle 32-bit breakpoint instructions correctly.
	* server/GdbServer.h: Correct BREAK_INSTR to EBREAK instruction pattern.
	* server/MpHash.cpp: Correct instructions to be 32-bits.
	* server/MpHash.h: Likewise.
	* server/main.cpp: Cycle until CPU no longer in reset. Remove redundant command line arguments.

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Fix spelling mistake in comment.
	* server/Cpu.h: Likewise.
	* server/GdbServer.cpp: Likewise.
	* server/GdbServer.h: Likewise.
	* server/main.cpp: Likewise.

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/Cpu.cpp: Call into readReg, writeReg within CPU correctly.
	* server/GdbServer.cpp: Continue should step without reporting exception.

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* server/GdbServer.cpp: Corrected RISCV_PC_REGNUM to be 32.

2017-05-15  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Add -g flag to CXXFLAGS in example configure command.
	* server/GdbServer.cpp: Respond to vMustReplyEmpty.
	* server/main.cpp: Create the Cpu object.

2017-05-13  Ian Bolton  <ian.bolton@embecosm.com>

	* README.md: Added commands required to build.

2017-05-12  Ian Bolton  <ian.bolton@embecosm.com>

	* AUTHORS: Created.
	* configure.ac: Created.
	* Makefile.am: Created.
	* NEWS: Created.
	* README: Created as symbolic link to README.md.
	* README.md: Updated with a note about lack of doc directory.
	* server/Cpu.cpp: Created.
	* server/Cpu.h: Created.
	* server/GdbServer.cpp: Created.
	* server/GdbServer.h: Created.
	* server/main.cpp: Created.
	* server/Makefile.am: Created.
	* server/MpHash.cpp: Created.
	* server/MpHash.h: Created.
	* server/RspConnection.cpp: Created.
	* server/RspConnection.h: Created.
	* server/RspPacket.cpp: Created.